# secretfence

./: .llmignore  Cargo.toml  README.md  install.sh
.claude/: settings.json
.github/workflows/: release.yml
docs/superpowers/specs/: 2026-04-20-secretfence-design.md
profiles/: generic.toml  web3.toml
src/: cli.rs  config.rs  main.rs
src/hook/: installer.rs  mod.rs  scanner.rs
src/rules/: builtin.toml  engine.rs  loader.rs  mod.rs  web3.toml
src/sandbox/: linux.rs  macos.rs  mod.rs  profiles.rs
src/scan/: detector.rs  mod.rs  reporter.rs
src/scan/generators/: claude.rs  cursor.rs  gemini.rs  llmignore.rs  mod.rs
src/verify/: mod.rs  validators.rs
