[package]
name = "secretfence"
version = "0.1.0"
edition = "2021"
description = "Fully local secret protection for AI coding tools"
license = "MIT"
repository = "https://github.com/Cyfrin/secretfence"
keywords = ["security", "secrets", "ai", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
glob = "0.3"
colored = "2"
ignore = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
